# inference-agent

./: .gitignore  README.en.md  README.md  findings.md  progress.md  task_plan.md  一个例子.md
auto-profiling/: README.md  README.zh-CN.md  SKILL.md  aim.cuda-kernel.md  aim.e2e.md  aim.llm-serving.md  aim.md  aim.zh-CN.md  bootstrap_aim.py  findings.md  log_schema.json  progress.md  pyproject.toml  runner.py  scorer.py  task_plan.md
auto-profiling/.auto-profiling/: README.md  current_contract.md  evaluator_report.md  experiment_log.md  findings.md  next_handoff.md  progress.md  session_state.json  task_plan.md  worklog.md
auto-profiling/references/: 01_operating_model.md  02_experiment_loop.md  03_mutation_lanes.md  04_exactness_gate.md  05_artifacts_and_scoring.md  06_harness_patterns.md
auto-profiling/tests/: test_autopilot.py  test_runtime.py
cuda-kernel-opt-skill/: SKILL.md
cuda-kernel-opt-skill/skills/: README.md
docs/plans/: 2026-04-16-llm-multi-skill-expansion.md  2026-04-16-three-module-restructure.md  2026-04-17-architecture-review.md  2026-04-17-auto-profiling-runtime-lane-awareness.md  2026-04-17-readme-en-and-gitignore.md  2026-04-17-root-readme-and-publish.md  2026-04-17-system-capability-upgrade.md  2026-04-19-deep-review-and-optimizations.md
e2e-inference-opt-skill/: SKILL.md
e2e-inference-opt-skill/references/: 01_baseline.md  02_profiling.md  03_roofline.md  04_compute_opt.md  05_memory_io.md  06_parallelism.md  (+3 more)
llm-serving-opt-skill/: SKILL.md
tests/: test_bootstrap_aim.py  test_operator_backend_synth.py  test_skill_catalog.py
(+31 files in other folders)
